--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -17,7 +17,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="@string/movimentacao" />
+        android:text="@string/inserirNovoCredito" />
 
         <TextView
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
             android:hint="@string/campoData"
             android:inputType="date"
             android:minHeight="48dp"
-            android:textColorHint="#757575" />
+            android:textColorHint="@color/Hint" />
 
         <TextView
         android:layout_width="match_parent"
