--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,7 @@
     <color name="Header">#29B6F6</color>
     <color name="Page">#3C4CD8</color>
 
+    <color name="Hint">#757575</color>
+
 
 </resources>
