--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -6,8 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_margin="20dp"
-    android:layout_height="wrap_content"
-    tools:context="com.example.controlenamao.DialogFragment">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/tvTitulo"
@@ -176,6 +175,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:backgroundTint="@color/Page"
+                android:textColor="@color/white"
                 android:id="@+id/btBuscar"
                 android:text="@string/buscar"/>
 
