--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -11,13 +11,6 @@
         android:layout_height="match_parent"
         android:padding="50dp">
 
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:id="@+id/lvLista"/>
-
-
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -99,20 +92,10 @@
         android:layout_gravity="center"
         android:text="@string/inserir" />
 
-<!--        <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_weight="1">-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
-
-
-<!--        </LinearLayout>-->
-
-<!--    </ScrollView>-->
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/lvListaC"/>
 
         <LinearLayout
             android:layout_width="match_parent"
