--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -36,7 +36,7 @@
             android:hint="@string/escreva"
             android:inputType="textCapSentences|textAutoCorrect"
             android:minHeight="48dp"
-            android:textColorHint="#757575" />
+            android:textColorHint="@color/Hint" />
 
         <Button
             android:id="@+id/btCadastroGasto"
